# protobuf2cpp

./: .gitignore  README.md  main.js  package-lock.json  package.json  parser.js  pro.proto  protobuf2cpp.js  test.js  token.js
protocol/: CMakeLists.txt  anchor_indicate_notify.h  anchor_live.h  anchor_live_info.h  anchor_live_status_notify.h  bag_notify.h  bag_up.h  banner_notify.h  blessingbag_ext.h  blessingbag_finish_notify.h  blessingbag_global_msg_notify.h  blessingbag_info.h  blessingbag_notify.h  cash_packet_notify.h  challenge_award.h  challenge_bet.h  challenge_task.h  challenge_task_status.h  chat_notify.h  chat_up.h  client_type_map.h  dialog_button.h  dialog_notify.h  double_eleven_lottery_best_assist_list.h  double_eleven_lottery_draw_list.h  double_eleven_lottery_notify.h  double_eleven_lottery_prize_list.h  double_eleven_lottery_send_notify.h  ext.h  fit_level_up_global_msg_notify.h  followed_notify.h  friend_status.h  gift_effect_notify.h  gift_notify.h  gift_pk_user_info.h  gift_up.h  giftbox_done.h  global_msg.h  guess_award.h  guess_item.h  (+73 more)
tpl/: class.tpl  cmake.tpl
